# Library-Orchestrator

./: .gitignore  GITHUB_DESCRIPTION_RU.md  LibSort.spec  README.md  _analyze_log.py  _analyze_log2.py  agents.md  config.example.json  library_gui.py  library_pipeline.py  llm.md  pyproject.toml  requirements.txt  run.py  setting.example.py  setting.py  ui.py  ui_en.json  ui_ru.json  upgrade.md
agents/: __init__.py  agent_a1_search.py  agent_a2_unpack.py  agent_a3_detect.py  agent_a4_dedupe.py  agent_a5_tags.py  agent_a5b_isbn.py  agent_a6_lm.py  agent_a7_rename.py  agent_a8_pack.py
orchestrator/: __init__.py  archive_adapters.py  config.py  dashboard.py  hotkeys.py  lmstudio.py  main.py  models.py  orchestrator.py  queues.py  resource_monitor.py  state_store.py
orchestrator/agents/: __init__.py  archivarius.py  base.py  duplicate.py  expert.py  pack.py  placement.py  repair.py  splitter.py  unpack.py
tests/: test_orchestrator_regressions.py
